--- a/views/loginform.html
+++ b/views/loginform.html
@@ -11,7 +11,7 @@
         <br/>
         <input name="password" type="password" placeholder="password"/>
         <br/>
-        <input type="submit"/>        
+        <input type="submit" value="Login"/>        
     </form>
 </body>
 </html>
