--- a/views/index.html
+++ b/views/index.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Financial Quotes</title>
 </head>
 <body>
-    Main page
+    <h1 style="text-align: center;">Financial Quotes Api Reference</h1>
+    <br/>
+    <br/>
+    <h2>Access some of the greatest finance quotes from authors all over the world</h2>
+    <br/>
+    <h3>By author name</h3>
+    <p>Access all the quotes we have by specific author</p>
+    <p>Api call:</p>
+    <p>financequotesapi.herokuapp.com/quotes/{author name} - (use only first and last name)</p>
+    <p>Get specific amount of quotes:</p>
+    <p>financequotesapi.herokuapp.com/quotes/{author name}/limit={limit}</p>
+    <br/>
+    <h3>Get random quote from author</h3>
+    <p>Api call:</p>
+    <p>financequotesapi.herokuapp.com/quotes/{author name}/rand</p>
+    <br/>
+    <h3>Get random quote</h3>
+    <p>Api call:</p>
+    financequotesapi.herokuapp.com/quotes/random/qr
 </body>
 </html>
