added admin panel

--- a/views/admin.html
+++ b/views/admin.html
@@ -11,12 +11,10 @@
     <button id="addBtn">+</button>
     <div class="flex-container">
         <form id="formContainer" action="/addquotes"  method="POST">
-
+            <input name="author" type="text"/>
             <input type="submit"/>
         </form>
     </div>
-
-
 
     <script src="js/admin.js"></script>
 </body>
