--- a/views/admin.html
+++ b/views/admin.html
@@ -3,22 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/styles.css"/>
     <title>Admin</title>
 </head>
 <body>
-    <h3>Add</h3>
-    <button id="addBtn">+</button>
-    <div class="flex-container">
-        <form id="formContainer" action="/addquotes"  method="POST">
+    <h2 class="add-title">Add Quotes</h2>
+   
+        <div class="main-content">
+            <form action="/addquotes"  method="POST">
+                <div>
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-center">
+                        <input class="form-control author-input" name="author" type="text"/>
+                        <button class="btn btn-outline-secondary btn-sm" id="addBtn" type="button">Insert</button>
+                        <input class="btn btn-outline-success btn-sm" type="submit" value="Submit"/>
+                    </div>
+                    <div class="add-form-container" id=formContainer>
+                        
+                    </div>                   
+                        <button class="btn btn-outline-danger btn-sm" type="button" id="clearButton">Clear</button>
+                </div> 
+            </form>  
+        </div>
+         
+    
+    <!--
+         <button id="addBtn">+</button>
+    <div>
+        <form class="flex-container" id="formContainer" action="/addquotes"  method="POST">
             <input name="author" type="text"/>
             <input type="submit"/>
         </form>
     </div>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    -->
+   
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
     <script src="js/admin.js"></script>
 </body>
 </html>
