--- a/views/admin.html
+++ b/views/admin.html
@@ -21,25 +21,11 @@
                     <div class="add-form-container" id=formContainer>
                         
                     </div>                   
-                        <button class="btn btn-outline-danger btn-sm" type="button" id="clearButton">Clear</button>
+                        <button class="btn btn-outline-danger btn-md" type="button" id="clearButton">Clear</button>
                 </div> 
             </form>  
         </div>
-         
-    
-    <!--
-         <button id="addBtn">+</button>
-    <div>
-        <form class="flex-container" id="formContainer" action="/addquotes"  method="POST">
-            <input name="author" type="text"/>
-            <input type="submit"/>
-        </form>
-    </div>
-
-
-    -->
-   
-    
+           
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
     <script src="js/admin.js"></script>
 </body>
