added money logo to client build

--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="main-container">
 
-        <h1 class="title">Financial Quotes Api Reference</h1>
+        <h1 class="title">Financial Quotes Api</h1>
         <br/>
         <br/>
         <h2>Access some of the greatest finance quotes from authors all over the world</h2>
