--- a/views/index.html
+++ b/views/index.html
@@ -37,6 +37,10 @@
 
     </div>
     
-    
+    <script>
+        // Fix `global is not defined` error
+        global = window
+      </script>
+  
 </body>
 </html>
