--- a/views/login.html
+++ b/views/login.html
@@ -13,7 +13,7 @@
     
     <div class="container form-container">
         <div class="form-style">
-            <form action='/login' method="POST">
+            <form action='/admin/login' method="POST">
                 <div class="row">
                     <label for="usernameInput" class="form-label">Username</label>
                     <input name="username" type="text" class="form-control" id="usernameInput" placeholder="JohnSmith123" required>
